dark mode fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,11 @@
 @tailwind utilities;
 
 :root {
-  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #05080b;
-  /* background-color: #121f28; */
+  background-color: #05080b; 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,19 +15,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* a {
-  font-weight: 500;
-  color: #ff715b;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #b34f40;
-  text-decoration: underline;
-} */
-
 body {
   margin: 0;
   min-height: 100vh;
+  background-color: #05080b; 
 }
 
 h1 {
@@ -38,25 +26,7 @@ h1 {
   line-height: 1.1;
 }
 
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -65,7 +35,5 @@ button:focus-visible {
   a:hover {
     color: #ff715b;
   }
-  /* button {
-    background-color: #f9f9f9;
-  } */
 }
+*/
